# sysex-drop

./: BUILDING.md  CHANGELOG.md  Cargo.toml  README.md  build-linux-appimage.sh  build-mac-bundle.sh  build.rs
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
src/: main.rs  midi.rs  theme.rs
tools/: mac_bundle_post_build.py  sysex-drop.desktop
wix/: main.wxs
