[package]
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Drag-and-drop MIDI SysEx dump utility"
edition = "2021"
homepage = "https://github.com/sourcebox/sysex-drop"
license = "MIT"
name = "sysex-drop"
repository = "https://github.com/sourcebox/sysex-drop"
rust-version = "1.56"
version = "0.1.0"

[dependencies]
eframe = {version = "0.15", features = ["persistence"]}
log = {version = "0.4", features = ["max_level_debug", "release_max_level_info"]}
midir = "0.7"
serde = {version = "1", features = ["derive"], optional = true}
simple_logger = "1"

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"]

[profile.release]
lto = true

[package.metadata.bundle]
icon = [
  "icons/32x32/sysex-drop.png",
  "icons/128x128/sysex-drop.png",
  "icons/256x256/sysex-drop.png",
]
identifier = "de.sourcebox.sysex-drop"
name = "SysEx Drop"
osx_minimum_system_version = "10.8"
