[package]
name = "sysex-drop"
version = "1.2.0"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
license = "MIT"
edition = "2021"
rust-version = "1.60"
description = "Drag-and-drop MIDI SysEx dump utility"
homepage = "https://github.com/sourcebox/sysex-drop"
repository = "https://github.com/sourcebox/sysex-drop"

[dependencies]
log = {version = "0.4", features = ["max_level_debug", "release_max_level_info"]}
midir = "0.8"
midly = "0.5"
serde = {version = "1", features = ["derive"]}
simple_logger = "2.1"

[dependencies.eframe]
version = "0.18"
features = ["persistence"]

[profile.release]
lto = true
strip = true

[package.metadata.bundle]
icon = [
  "icons/32x32/sysex-drop.png",
  "icons/128x128/sysex-drop.png",
  "icons/256x256/sysex-drop.png",
]
identifier = "de.sourcebox.sysex-drop"
name = "SysEx Drop"
osx_minimum_system_version = "10.8"
